@@ -25,6 +25,8 @@
 #define buspirate_h
 
 extern const char buspirate_desc[];
+extern const char buspirate_bb_desc[];
 void buspirate_initpgm (struct programmer_t *pgm);
+void buspirate_bb_initpgm (struct programmer_t *pgm);
 
 #endif
